k8s/05-ingress/01-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bunnywear-ingress
  namespace: bunnywear
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  tls:
  - hosts:
    - c4rlos.dev
    secretName: c4rlos-dev-tls

  rules:
  - host: c4rlos.dev
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: django-backend
            port:
              number: 8000

      - path: /admin
        pathType: Prefix
        backend:
          service:
            name: django-backend
            port:
              number: 8000

      - path: /
        pathType: Prefix
        backend:
          service:
            name: bunnywear-frontend
            port:
              number: 3000
